package TicTacToe.Game;

public interface BoardGame {
    void play();
    void switchPlayer();
    void announceResult();
}
