package TicTacToe.Game;

public class DrawState extends GameState {
    @Override
    public boolean isGameOver() {
        return true;
    }
}