package TicTacToe.Player;

import TicTacToe.Game.Board;
import TicTacToe.Game.Position;

import java.util.Scanner;

public class HumanPlayerStrategy implements PlayerStrategy{
    private final String playerName;
    private final Scanner scanner;
    public HumanPlayerStrategy(String playerName) {
        this.playerName = playerName;
        this.scanner = new Scanner(System.in);
    }
    @Override
    public Position makeMove(Board board) {
        while (true) {
            System.out.printf("%s, enter your move (row [0-"+(board.getSize()-1)+"] and column [0-"+(board.getSize()-1)+"]): ", playerName);
            try {
                // Prompts the human player to enter their move.
                int row = scanner.nextInt();
                int col = scanner.nextInt();
                Position move = new Position(row, col);
                // Validates the player's input.
                // If the move is valid, returns the position.
                if (board.isValidMove(move)) {
                    return move;
                }
                // If the move is invalid, prompts the player to try again.
                System.out.println("Invalid move. Try again.");
            } catch (Exception e) {
                System.out.println("Invalid input. Please enter row and column as numbers.");
                scanner.nextLine(); // Clear input buffer
            }
        }
    }
}