@startuml
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam classAttributeIconSize 0

class Board {
        - {static} Character EMPTY
        - int size
        - Character[][] grid
        + <<Create>> Board(int)
        + int getSize()
        + boolean isValidMove(Position)
        + void makeMove(Position,Character)
        + boolean hasGameStateChanged(GameContext)
        - boolean isWinningLine(Character[])
        + void printBoard()
    }

    class Position {
        + int row
        + int col
        + <<Create>> Position(int,int)
    }

    class Player {
        - Character symbol
        - PlayerStrategy playerStrategy
        + <<Create>> Player(Character,PlayerStrategy)
        + Character getSymbol()
        + PlayerStrategy getPlayerStrategy()
    }

    abstract class GameState {
        - Player player
        + <<Create>> GameState(Player)
        + <<Create>> GameState()
        + Player getPlayer()
        + {abstract} boolean isGameOver()
    }

    class InProgressState {
        + <<Create>> InProgressState(Player)
        + boolean isGameOver()
    }

    class WonState {
        + <<Create>> WonState(Player)
        + boolean isGameOver()
    }

    class DrawState {
        + boolean isGameOver()
    }

    GameState <|-- InProgressState
    GameState <|-- WonState
    GameState <|-- DrawState

class GameContext {
        - GameState currentState
        + <<Create>> GameContext(Player)
        + void setCurrentState(GameState)
        + boolean isGameOver()
        + GameState getCurrentState()
    }

    interface GameEventListener {
        ~ void onMoveMade(Position,Character)
        ~ void onGameStateChanged(GameState)
    }

    class FileLoggerListener {
        - String logFilePath
        + <<Create>> FileLoggerListener(String)
        + void onMoveMade(Position,Character)
        + void onGameStateChanged(GameState)
        - void log(String)
    }

    GameEventListener <|.. FileLoggerListener

interface PlayerStrategy {
        ~ Position makeMove(Board)
    }

    class HumanPlayerStrategy {
        - String playerName
        - Scanner scanner
        + <<Create>> HumanPlayerStrategy(String)
        + Position makeMove(Board)
    }

    class ComputerPlayerStrategy {
        - String playerName
        - Random random
        + <<Create>> ComputerPlayerStrategy(String)
        + Position makeMove(Board)
    }

    PlayerStrategy <|.. HumanPlayerStrategy
    PlayerStrategy <|.. ComputerPlayerStrategy

class PlayerFactory {
        + {static} Player createPlayer(Character,PlayerStrategy)
    }

interface BoardGame {
        ~ void play()
        ~ void switchPlayer()
        ~ void announceResult()
    }

    class TicTacToeGame {
        - Board board
        - int numberOfPlayers
        - List<Player> players
        - int currentPlayerIndex
        - GameContext gameContext
        - List<GameEventListener> listeners
        + void addListener(GameEventListener)
        + void notifyMoveMade(Position,Character)
        + void notifyGameStateChanged(GameState)
        + <<Create>> TicTacToeGame(int,List<PlayerStrategy>,List<Character>,int)
        + void play()
        + void switchPlayer()
        + void announceResult()
    }

    BoardGame <|.. TicTacToeGame

class TicTacDemoApplication {
        - {static} Scanner scanner
        - {static} boolean getChoice(String)
        - {static} char getSymbol(String)
        + {static} void main(String[])
    }

' ========= CROSS-PACKAGE RELATIONSHIPS =========
TicTacToeGame *-- Board
TicTacToeGame *-- GameContext
TicTacToeGame *-- Player
TicTacToeGame --> GameEventListener

GameContext --> GameState
GameState --> Player
Player --> PlayerStrategy
Board --> Position
Board --> GameContext

PlayerFactory ..> Player
PlayerFactory ..> PlayerStrategy

@enduml
' Trigger workflow update
